@@ -1,14 +1,9 @@
 #! /bin/sh
 #
-# oar-node     OAR Dedicated Node
+# oar-node     OAR compute node initialization script
 #
-#
-# --/--/----: Based on startup scripts from Bruno Bzeznik <bruno.bzeznik@imag.fr>
-# 02/09/2011: Merge RPM and Debian scripts by Philippe Le Brouster <philippe.le-brouster@imag.fr>
-#
-
 # chkconfig: 2345 99 01
-# description: OAR Dedicated Node
+# description: OAR compute node initialization script
 #
 ### BEGIN INIT INFO
 # Provides:         oar-node
@@ -16,7 +11,7 @@
 # Required-Stop:    $all
 # Default-Start:    2 3 4 5
 # Default-Stop:     0 1 6
-# Short-Description:    OAR Dedicated Node (launch its own sshd)
+# Short-Description:    OAR compute node initialization script (launch its own sshd)
 ### END INIT INFO
 
 LANG=C
@@ -24,9 +19,11 @@ export LANG
 
 PATH=%%SBINDIR%%:%%BINDIR%%:/sbin:/bin:/usr/sbin:/usr/bin:$PATH
 NAME=oar-node
-DESC=oar-node
+DESC="OAR node"
 OAR_SSHD_CONF="%%OARCONFDIR%%/sshd_config"
-SSHD_OPTS="-f $OAR_SSHD_CONF -o PidFile=%%OARHOMEDIR%%/oar_sshd.pid"
+PIDFILE="%%RUNDIR%%/$NAME_sshd.pid"
+SSHD_OPTS="-f $OAR_SSHD_CONF -o PidFile=$PIDFILE"
+SELINUXENABLED_CMD=$(which selinuxenabled 2>/dev/null)
 NOLSB=
 
 [ -f /lib/lsb/init-functions ] || NOLSB=yes
@@ -42,13 +39,15 @@ elif [ -f /etc/gentoo-release ]; then
 fi
 
 start_oar_node() {
-    echo " * Edit start_oar_node function in %%DEFAULTDIR%%/oar-node if you want"
-    echo "   to perform a specific action (e.g. to switch the node to Alive)"
+    echo
+    echo " * Edit the start_oar_node function in %%DEFAULTDIR%%/oar-node if you"
+    echo "   want to perform specific actions (e.g. switch the node to Alive)"
 }
 
 stop_oar_node() {
-    echo " * Edit stop_oar_node function in %%DEFAULTDIR%%/oar-node if you want"
-    echo "   to perform a specific action (e.g. to switch the node to Absent)"
+    echo
+    echo " * Edit the stop_oar_node function in %%DEFAULTDIR%%/oar-node if you"
+    echo "   want to perform specific actions (e.g. switch the node to Absent)"
 }
 
 [ -r %%DEFAULTDIR%%/oar-node ] && . %%DEFAULTDIR%%/oar-node
@@ -73,45 +72,42 @@ else
     exit 2
 fi
 
-failure()
-{
-    fail_msg "$1"
-    exit 0
-}
-
 do_start() {
     begin_msg "Starting $DESC"
+    if [ -n "$SELINUXENABLED_CMD" -a -x $SELINUXENABLED_CMD ] && $SELINUXENABLED_CMD; then
+        fail_msg "SELinux is enabled, $DESC cannot be started."	
+        exit 2
+    fi
     if [ -f "$OAR_SSHD_CONF" ] ; then
-        if start_daemon -p "%%OARHOMEDIR%%/oar_sshd.pid" -n "-20" /usr/sbin/sshd $SSHD_OPTS; then
-            
+        if start_daemon -p $PIDFILE -n "-20" /usr/sbin/sshd $SSHD_OPTS; then
             # redhat world
-            [ -d /var/lock/subsys/ ] && touch  /var/lock/subsys/$NAME
-            
+            [ -d /var/lock/subsys/ ] && touch /var/lock/subsys/$NAME
             succ_msg "OAR dedicated SSH server started."
         else
             fail_msg "Failed to start OAR dedicated SSH server."
             exit 2
         fi
     fi
-    begin_msg "Executing The $DESC startup actions"
+    begin_msg "Executing $DESC startup actions"
     if start_oar_node; then
-        succ_msg "The $DESC startup actions has been executed sucessfully."
+        succ_msg "$DESC startup actions were executed sucessfully."
     else
-        fail_msg "Failed to execute the $DESC startup actions."
+        fail_msg "$DESC startup actions failed."
         exit 2
     fi
 }
 
 do_stop() {
-    begin_msg "Executing the $DESC shutdown actions"
+    begin_msg "Executing $DESC shutdown actions"
+    echo
     if stop_oar_node; then
-        succ_msg "This $DESC shutdown actions has been executed sucessfully."
+        succ_msg "$DESC shutdown actions were executed sucessfully."
     else
-        fail_msg "Failed to execute the $DESC shutdown actions."
+        fail_msg "$DESC shutdown actions failed."
     fi
-    begin_msg "Stopping $DESC "
+    begin_msg "Stopping $DESC"
     if [ -f "$OAR_SSHD_CONF" ] ; then
-        if killproc -p  "%%OARHOMEDIR%%/oar_sshd.pid"; then
+        if killproc -p  $PIDFILE; then
             # redhat world
             [ -d /var/lock/subsys/ ] && rm -f /var/lock/subsys/$NAME
             succ_msg "OAR dedicated SSH server stopped."
